--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fortawesome/free-solid-svg-icons": "^6.2.0",
+		"svelte-fa": "^3.0.3"
+	}
 }
